--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1405,12 +1405,12 @@
 		}
 
 	body, input, select, textarea {
-		color: #fff;
-		font-family: "Open Sans", Helvetica, sans-serif;
-		font-size: 15pt;
-		font-weight: 400;
-		letter-spacing: 0.075em;
-		line-height: 1.65em;
+		color: #bbbbbb;
+		font-family: "Avenir Next", Roboto, sans-serif;
+		font-size: 14px;
+		font-weight: 0;
+		letter-spacing: 0em;
+		line-height: 24px;
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -1463,16 +1463,20 @@
 
 	p {
 		margin: 0 0 2em 0;
+		font-size: 14px;
 	}
-
+	/*chance header text sizes*/
 	h1, h2, h3, h4, h5, h6 {
-		color: #fff;
-		font-weight: 800;
-		letter-spacing: 0.15em;
-		line-height: 1em;
+		color: #999999;
+		font-weight: 0;
+		letter-spacing: 0em;
+		line-height: 28px;
 		margin: 0 0 1em 0;
+		font-family: "Avenir Next", Roboto, sans-serif; 
+
 /*	text-transform: lowercase;
-*/	}
+*/	
+		}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 			color: inherit;
@@ -1508,18 +1512,19 @@
 		}
 
 	h4 {
-		font-size: 1em;
-		line-height: 1.5em;
+		font-size: 1.5em;
+		line-height: 0em;
+		font-family: "Avenir Next light", Roboto, sans-serif; ;
 	}
 
 	h5 {
 		font-size: 0.8em;
-		line-height: 1.5em;
+		line-height: 0em;
 	}
 
 	h6 {
 		font-size: 0.7em;
-		line-height: 1.5em;
+		line-height: 0m;
 	}
 
 	sub {
@@ -2229,8 +2234,8 @@
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #fff;
-		color: #fff;
+		box-shadow: inset 0 0 0 1px #333333;
+		color: #333333;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2252,7 +2257,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(144, 144, 144, 0.25);
+			background-color: #333333;
+			color: #f8f8fa;
 		}
 
 		input[type="submit"]:active,
@@ -2521,43 +2527,43 @@
 		}
 
 		.spotlight:nth-child(1) {
-			background-color: rgba(0, 0, 0, 0.075);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(2) {
-			background-color: rgba(0, 0, 0, 0.15);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(3) {
-			background-color: rgba(0, 0, 0, 0.225);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(4) {
-			background-color: rgba(0, 0, 0, 0.3);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(5) {
-			background-color: rgba(0, 0, 0, 0.375);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(6) {
-			background-color: rgba(0, 0, 0, 0.45);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(7) {
-			background-color: rgba(0, 0, 0, 0.525);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(8) {
-			background-color: rgba(0, 0, 0, 0.6);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(9) {
-			background-color: rgba(0, 0, 0, 0.675);
+			background-color: #f8f8fa;
 		}
 
 		.spotlight:nth-child(10) {
-			background-color: rgba(0, 0, 0, 0.75);
+			background-color: #f8f8fa;
 		}
 
 		@media screen and (max-width: 1280px) {
@@ -3154,8 +3160,8 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
-		color: #ffffff;
+		background: #ffffff;
+		color: #aaaaaa;
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
@@ -3195,6 +3201,10 @@
 					text-transform: uppercase;
 				}
 
+				#menu ul > li > a:hover {
+					color: black;
+				}
+
 					@media screen and (max-width: 736px) {
 
 						#menu ul > li > a {
@@ -3216,6 +3226,7 @@
 			top: 0;
 			vertical-align: middle;
 			width: 7em;
+			color: black;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -3248,7 +3259,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #2e3842;
+		background: #1e2123;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -3503,7 +3514,7 @@
 			-ms-transition-delay: 1.25s;
 			transition-delay: 1.25s;
 			content: '';
-			background: #161617;
+			background: #1e2123;
 			display: block;
 			width: 100%;
 			height: 100%;
@@ -3916,14 +3927,24 @@
 }
 .section-margin.title-size {
 	font-size: 30px;
+	color: white;
 	font-family: "Avenir Next light" !important;
 }
 .custom-quote-style {
-	font-family: "PT Serif",Georgia,Times,"Times New Roman",serif;
+	font-family: "Avenir Next light",Georgia,Times,"Times New Roman",serif;
 	font-size: 4vw;
 	line-height: 80px;
 	text-align: center;
 	margin: 100px 0 100px;
 	letter-spacing: -0.02em;
 }
-
+.case-study-title {
+	font-size: 42px;
+	color: #333333;
+	line-height: 54px;
+}
+/*Logo attributes*/
+#logo {
+	font-family: "Avenir Next" !important;
+	color: #f8f8fa; 
+}
