--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3286,6 +3286,7 @@
 				display: block;
 				height: inherit;
 				line-height: inherit;
+				color: white;
 			}
 
 				@media screen and (max-width: 736px) {
@@ -3646,7 +3647,7 @@
 /* Main */
 
 	#main > header {
-		padding: 12em 0 27em 0 ;
+		padding: 12em 0 42em 0 ;
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
