--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1462,20 +1462,26 @@
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 2em 0 2em 0;
 /*		font-size: 14px;*/
 	}
 	/*change header text sizes*/
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2 {
 		color: #999999;
 		font-weight: 0;
 		letter-spacing: 0em;
 		line-height: 1.75em;
-		margin: 0 0 1em 0;
-		font-family: "Avenir Next", Roboto, sans-serif; 
+		margin: 0 0 0 0;
+		font-family: "Avenir Next", Roboto, sans-serif; 	
+		}
 
-/*	text-transform: lowercase;
-*/	
+	h3, h4, h5, h6 {
+		color: #999999;
+		font-weight: 0;
+		letter-spacing: 0em;
+		line-height: 1.75em;
+		margin: 0 0 0.2em 0;
+		font-family: "Avenir Next", Roboto, sans-serif; 	
 		}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -1484,15 +1490,15 @@
 		}
 
 	h2 {
-		font-size: 2.5em;
-		line-height: 1.75em;
+		font-size: 2.25em;
+		line-height: 1.5em;
 	}
 
 		@media screen and (max-width: 736px) {
 
 			h2 {
 				font-size: 1.7em;
-				line-height: 1.65em;
+				line-height: 1.5em;
 			}
 
 		}
@@ -1518,7 +1524,7 @@
 	}
 
 	h5 {
-		font-size: 0.8em;
+		font-size: 1em;
 		line-height: 0em;
 	}
 
@@ -1528,13 +1534,13 @@
 	}
 
 	sub {
-		font-size: 0.8em;
+		font-size: 1em;
 		position: relative;
 		top: 0.5em;
 	}
 
 	sup {
-		font-size: 0.8em;
+		font-size: 1em;
 		position: relative;
 		top: -0.5em;
 	}
@@ -2238,7 +2244,7 @@
 		color: #333333;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.8em;
+		font-size: 1em;
 		font-weight: 600;
 		height: 3.125em;
 		letter-spacing: 0.225em;
@@ -2292,7 +2298,7 @@
 		input[type="button"].small,
 		button.small,
 		.button.small {
-			font-size: 0.8em;
+			font-size: 1em;
 		}
 
 		input[type="submit"].big,
@@ -3194,7 +3200,7 @@
 					border: 0;
 					color: inherit;
 					display: block;
-					font-size: 0.8em;
+					font-size: 1em;
 					letter-spacing: 0.225em;
 					outline: 0;
 					text-decoration: none;
@@ -3259,10 +3265,10 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #1e2123;
-		height: 3em;
+		background: rgba(30, 33, 35, 0.9);
+		height: 3.5em;
 		left: 0;
-		line-height: 3em;
+		line-height: 3.45em;
 		position: fixed;
 		top: 0;
 		width: 100%;
@@ -3292,7 +3298,7 @@
 				@media screen and (max-width: 736px) {
 
 					#header h1 a {
-						font-size: 0.8em;
+						font-size: 1em;
 					}
 
 				}
@@ -3321,7 +3327,7 @@
 						border: 0;
 						color: #fff;
 						display: block;
-						font-size: 0.8em;
+						font-size: 1em;
 						letter-spacing: 0.225em;
 						padding: 0 1.5em;
 						text-transform: uppercase;
@@ -3418,6 +3424,7 @@
 			position: relative;
 			z-index: 1;
 			color: white;
+			font-family: "Roboto";
 		}
 
 			#banner h2:before, #banner h2:after {
@@ -3472,7 +3479,7 @@
 			border: none;
 			bottom: 0;
 			color: inherit;
-			font-size: 0.8em;
+			font-size: 1em;
 			height: 8.5em;
 			left: 50%;
 			letter-spacing: 0.225em;
@@ -3526,6 +3533,7 @@
 			opacity: 0;
 		}
 		#banner-typetext {
+			margin-top: 2em;
 			margin-left: auto;
     	margin-right: auto;
     	width: 10em;
@@ -3720,7 +3728,7 @@
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color: rgba(30, 33, 35, 1);
 		text-align: center;
 	}
 
@@ -3738,7 +3746,7 @@
 
 		#footer .copyright {
 			color: rgba(255, 255, 255, 0.5);
-			font-size: 0.8em;
+			font-size: 1em;
 			letter-spacing: 0.225em;
 			list-style: none;
 			padding: 0;
@@ -3949,9 +3957,11 @@
 	font-size: 42px;
 	color: #333333;
 	line-height: 54px;
+	margin-bottom: 0em;
 }
 /*Logo attributes*/
 #logo {
-	font-family: "Avenir Next" !important;
+	font-family: "Roboto" !important;
 	color: #f8f8fa; 
+	font-size: 1.75em;
 }
