--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1406,8 +1406,8 @@
 
 	body, input, select, textarea {
 		color: #bbbbbb;
-		font-family: "Avenir Next", Roboto, sans-serif;
-		font-size: 14px;
+		font-family: "Avenir Next Light", Roboto, sans-serif;
+		font-size: 1em;
 		font-weight: 0;
 		letter-spacing: 0em;
 		line-height: 24px;
@@ -1608,16 +1608,23 @@
 		color: rgba(255, 255, 255, 0.5);
 		position: relative;
 		top: -0.25em;
+		font-weight: 0;
+    font-style: normal;
+    font-size: 21px;
+    line-height: 1.58;
+    letter-spacing: -0.003em;
+    font-family: "Georgia", serif;
 	}
 
-	header h3 + p {
-		font-size: 1.1em;
-	}
-
+	header h3 + p,
 	header h4 + p,
 	header h5 + p,
 	header h6 + p {
-		font-size: 0.9em;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 21px;
+    line-height: 1.58;
+    letter-spacing: -0.003em;
 	}
 
 	header.major {
@@ -1998,10 +2005,22 @@
 		list-style: disc;
 		margin: 0 0 2em 0;
 		padding-left: 1em;
+		color: rgba(0,0,0,0.8);
+		font-style: normal;
+	  font-size: 21px;
+	  line-height: 1.58;
+	  letter-spacing: -0.003em;
+	  font-family: "Georgia", serif;
 	}
 
 		ul li {
 			padding-left: 0.5em;
+			color: rgba(0,0,0,0.8);
+			font-style: normal;
+	    font-size: 21px;
+	    line-height: 1.58;
+	    letter-spacing: -0.003em;
+	    font-family: "Georgia", serif;
 		}
 
 		ul.alt {
@@ -2256,6 +2275,7 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+
 	}
 
 		input[type="submit"]:hover,
@@ -2272,7 +2292,8 @@
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(144, 144, 144, 0.5);
+			background-color: rgba(144, 144, 144, 0.7);
+			color: #000000;
 		}
 
 		input[type="submit"].icon:before,
@@ -2289,7 +2310,7 @@
 		button.fit,
 		.button.fit {
 			display: block;
-			margin: 0 0 1em 0;
+			margin: 2em 0 1em 0;
 			width: 100%;
 		}
 
@@ -2298,7 +2319,8 @@
 		input[type="button"].small,
 		button.small,
 		.button.small {
-			font-size: 1em;
+			font-size: 14px;
+			font-family: "Avenir Next";
 		}
 
 		input[type="submit"].big,
@@ -2317,6 +2339,7 @@
 			border: 1px solid white;
 			box-shadow: none !important;
 			color: #ffffff !important;
+			font-family: "Avenir Next light", !important;
 		}
 
 			input[type="submit"].special:hover,
@@ -2324,7 +2347,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: rgba(30,33,35, 0.7) !important;
+				background-color: rgba(30,33,35, 1) !important;
 			}
 
 			input[type="submit"].special:active,
@@ -2332,7 +2355,8 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #eb341c !important;
+				background-color: rgba(144, 144, 144, 0.7);
+				color: #000000;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2516,7 +2540,7 @@
 			}
 
 		.spotlight .content {
-			padding: 2em 4em 0.1em 4em ;
+			padding: 2em 0em 0.1em 2em;
 			-moz-order: 2;
 			-webkit-order: 2;
 			-ms-order: 2;
@@ -2524,7 +2548,6 @@
 			max-width: 48em;
 			width: 50%;
 		}
-
 		.spotlight .content2 {
 			padding: 2em 2em 0.1em 2em;
 			-moz-order: 2;
@@ -2586,11 +2609,11 @@
 		@media screen and (max-width: 1280px) {
 
 			.spotlight .image {
-				width: 45%;
+				width: 50%;
 			}
 
 			.spotlight .content {
-				width: 55%;
+				width: 50%;
 			}
 
 		}
@@ -2629,11 +2652,11 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 6em 0 4em 0 ;
+		padding: 4em 0 4em 0 ;
 	}
 
 		.wrapper > .inner {
-			width: 40em;
+			width: 700px;
 			margin: 0 auto;
 		}
 
@@ -2692,6 +2715,7 @@
 
 			.wrapper.style1 header.major p {
 				color: #329890;
+				font-family: "Avenir Next";
 			}
 
 			.wrapper.style1 label {
@@ -2999,7 +3023,7 @@
 			}
 
 			.wrapper.style5 header p {
-				color: #8E8892;
+				color: rgba(0,0,0,0.8);
 			}
 
 			.wrapper.style5 header.major h2, .wrapper.style5 header.major h3, .wrapper.style5 header.major h4, .wrapper.style5 header.major h5, .wrapper.style5 header.major h6 {
@@ -3209,13 +3233,14 @@
 
 				#menu ul > li > a {
 					border: 0;
-					color: inherit;
+					color: #aaaaaa;
 					display: block;
-					font-size: 1em;
+					font-size: 16px;
 					letter-spacing: 0.225em;
 					outline: 0;
 					text-decoration: none;
 					text-transform: uppercase;
+					font-family: "Avenir Next";
 				}
 
 				#menu ul > li > a:hover {
@@ -3355,7 +3380,7 @@
 								background-repeat: no-repeat;
 								content: '';
 								display: inline-block;
-								height: 3.75em;
+								height: 2.5em;
 								vertical-align: top;
 								width: 2em;
 							}
@@ -3666,7 +3691,6 @@
 /* Main */
 
 	#main > header {
-		padding: 12em 0 42em 0 ;
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
@@ -3676,14 +3700,17 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align: center;
+		margin-top: -3em;
 	}
 
 		#main > header h2 {
-			font-size: 1.75em;
-			margin: 0 0 0.5em 0;
+			font-family: "Avenir Next Light", Roboto, sans-serif;
+			font-size: 1.5em;
+			margin: 0 0 0 0;
 		}
 
 		#main > header p {
+			font-family: "Avenir Next Light", Roboto, sans-serif;
 			color: inherit;
 			letter-spacing: 0.225em;
 			text-transform: uppercase;
@@ -3691,13 +3718,14 @@
 		}
 
 			#main > header p a {
+				font-family: inherit;
 				color: inherit;
 			}
 
 		@media screen and (max-width: 1680px) {
 
 			#main > header {
-				padding: 10em 0 33em 0 ;
+				padding: 14em 0 22.5em 0 ;
 			}
 
 		}
@@ -3705,7 +3733,7 @@
 		@media screen and (max-width: 1280px) {
 
 			#main > header {
-				padding: 14em 3em 22em 3em ;
+				padding: 14em 3em 22.5em 3em ;
 			}
 
 		}
@@ -3713,7 +3741,7 @@
 		@media screen and (max-width: 980px) {
 
 			#main > header {
-				padding: 14em 3em 22em 3em ;
+				padding: 14em 3em 22.5em 3em ;
 			}
 
 		}
@@ -3770,16 +3798,22 @@
 				line-height: 1em;
 				margin-left: 1em;
 				padding-left: 1em;
+				font-size: 1em;
 			}
 
 				#footer .copyright li:first-child {
 					border-left: 0;
 					margin-left: 0;
 					padding-left: 0;
+					color: rgba(255, 255, 255, 0.5);
+					font-size: 1em;
+					font-family: "Avenir Next";
 				}
 
 				#footer .copyright li a {
-					color: inherit;
+					color: rgba(255, 255, 255, 0.5);
+					font-family: "Avenir Next";
+					font-size: 1em;
 				}
 
 					#footer .copyright li a:hover {
@@ -3947,21 +3981,45 @@
 	margin-top: -250px; /* Half the height */
 	margin-left: -250px; /* Half the width */
 }
+.center-images-2 {
+	position: relative;
+	display: inline;
+	top: 50%;
+	left: 36%;
+	width: 500px;
+	height: 500px;
+	margin-top: -250px;
+	margin-left: -250px;
+ }
+.center-images-3 {
+	position: relative;
+	display: inline;
+	top: 50%;
+	left: 5%;
+	width: 500px;
+	height: 500px;
+	margin-top: -250px;
+	margin-left: -250px;
+ }
 .section-margin {
 	margin-top: 50px;
 	margin-bottom: 30px;
 }
 .section-margin.title-size {
-	font-size: 30px;
+	font-weight: 700;
+  font-style: normal;
+  font-size: 42px;
+  line-height: 1.15;
+  letter-spacing: -0.02em;
 	color: white;
-	font-family: "Avenir Next light" !important;
+	font-family: "Avenir Next light", !important;
 }
 .custom-quote-style {
-	font-family: "Avenir Next light",Georgia,Times,"Times New Roman",serif;
-	font-size: 4vw;
-	line-height: 5vw;
+	font-family: "Avenir Next light", !important;
+	font-size: 3em;
+	line-height: 1em;
 	text-align: center;
-	margin: 100px 0 100px;
+	margin: 50px 0 100px 0;
 	letter-spacing: 0em;
 }
 .case-study-title {
@@ -3969,10 +4027,15 @@
 	color: #333333;
 	line-height: 54px;
 	margin-bottom: 0em;
+	font-family: "Avenir Next light", !important;
 }
 /*Logo attributes*/
 #logo {
 	font-family: "Roboto" !important;
 	color: #f8f8fa; 
-	font-size: 1.75em;
+	font-size: 18px;
 }
+#snapstyle-logo {
+	margin-top: 3em;
+}
+
