--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3469,7 +3469,7 @@
 			position: relative;
 			z-index: 1;
 			color: white;
-			font-family: "Roboto";
+			font-family: "Roboto" !important;
 		}
 
 			#banner h2:before, #banner h2:after {
@@ -3487,6 +3487,7 @@
 				height: 2px;
 				position: absolute;
 				width: 100%;
+				font-family: "Roboto" !important;
 			}
 
 			#banner h2:before {
@@ -3722,6 +3723,26 @@
 		}
 
 /* Main */
+	
+	#main > header > h2 {
+			-moz-transform: scale(1);
+			-webkit-transform: scale(1);
+			-ms-transform: scale(1);
+			transform: scale(1);
+			-moz-transition: -moz-transform 0.5s ease, opacity 0.5s ease;
+			-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
+			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
+			transition: transform 0.5s ease, opacity 0.5s ease;
+			display: inline-block;
+			font-size: 3em;
+			opacity: 1;
+			padding-top: 1em;
+			position: relative;
+			z-index: 1;
+			color: white;
+			font-family: "Roboto" !important;
+		}
+
 
 	#main > header {
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/snapstyle/shopstyle.jpg");
@@ -3735,20 +3756,16 @@
 		text-align: center;
 		margin-top: -3em;
 		height: 100vh;
+		padding: 14em 0 19em 0;
 	}
-
-		#main > header h2 {
-			font-family: "Avenir Next Light", Roboto, sans-serif;
-			font-size: 1.5em;
-			margin: 0 0 0 0;
-		}
 
 		#main > header p {
 			font-family: "Avenir Next Light", Roboto, sans-serif;
-			color: inherit;
-			letter-spacing: 0.225em;
-			text-transform: uppercase;
-			top: 0;
+			color: white;
+			margin-left: auto;
+    	margin-right: auto;
+    	font-size: 1.5em;
+    	margin-top: 1.8em;
 		}
 
 			#main > header p a {
@@ -3756,48 +3773,30 @@
 				color: inherit;
 			}
 
-		@media screen and (max-width: 1680px) {
-
-			#main > header {
-				padding: 14em 0 19em 0 ;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			#main > header {
-				padding: 14em 3em 19em 3em ;
-			}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			#main > header {
-				padding: 14em 3em 19em 3em ;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			#main > header {
-				padding: 7em 3em 10em 3em ;
-			}
-
-				#main > header h2 {
-					font-size: 1.25em;
-					margin: 0 0 1em 0;
-				}
-
-		}
-
 	body.is-mobile #main > header {
 		background-attachment: scroll;
 	}
 
 /* Main 2 */
+
+	#main2 > header > h2 {
+			-moz-transform: scale(1);
+			-webkit-transform: scale(1);
+			-ms-transform: scale(1);
+			transform: scale(1);
+			-moz-transition: -moz-transform 0.5s ease, opacity 0.5s ease;
+			-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
+			-ms-transition: -ms-transform 0.5s ease, opacity 0.5s ease;
+			transition: transform 0.5s ease, opacity 0.5s ease;
+			display: inline-block;
+			font-size: 3em;
+			opacity: 1;
+			padding-top: 1em;
+			position: relative;
+			z-index: 1;
+			color: white;
+			font-family: "Roboto" !important;
+		}
 
 	#main2 > header {
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/aboutMePostit.jpg");
@@ -3811,14 +3810,8 @@
 		text-align: center;
 		margin-top: -3em;
 		height: 100vh;
+		padding: 14em 0 19em 0;
 	}
-
-		#main2 > header h2 {
-			font-family: "Avenir Next Light", Roboto, sans-serif;
-    	font-size: 3em;
-    	margin: 0.5em 0 0 0;
-    	color: white;
-		}
 
 		#main2 > header p {
 			font-family: "Avenir Next Light", Roboto, sans-serif;
@@ -3832,43 +3825,6 @@
 				font-family: inherit;
 				color: inherit;
 			}
-
-		@media screen and (max-width: 1680px) {
-
-			#main2 > header {
-				padding: 14em 0 19em 0 ;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			#main2 > header {
-				padding: 14em 3em 19em 3em ;
-			}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			#main2 > header {
-				padding: 14em 3em 19em 3em ;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			#main2 > header {
-				padding: 11em 3em 10em 3em ;
-			}
-
-				#main2 > header h2 {
-					font-size: 2em;
-					margin: 0 0 1em 0;
-				}
-
-		}
 
 	body.is-mobile #main2 > header {
 		background-attachment: scroll;
@@ -3964,10 +3920,10 @@
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3985,13 +3941,13 @@
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing .wrapper.style4 {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/stephjobs2blur.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/HouseHero.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
-		background-size: auto;
+		background-size: cover;
 	}
 
 	body.is-mobile.landing #footer {
