--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1521,7 +1521,7 @@
 	h4 {
 		font-size: 1.5em;
 		line-height: 24px;
-		font-family: "Avenir Next light" !important;
+		font-family: "Avenir Next" !important;
 	}
 
 	h5 {
@@ -3764,6 +3764,7 @@
 
 		}
 
+
 /* Main */
 	
 	#main > header > h2 {
@@ -3874,7 +3875,7 @@
 /* Footer */
 
 	#footer {
-		padding: 6em 0 4em 0 ;
+		padding: 1em 0 1em 0 ;
 		background-color: rgba(30, 33, 35, 1);
 		text-align: center;
 	}
@@ -4245,6 +4246,30 @@ body.is-loading #main .more {
 		opacity: 0;
 	}
 
+	#main:after {
+			-moz-pointer-events: none;
+			-webkit-pointer-events: none;
+			-ms-pointer-events: none;
+			pointer-events: none;
+			-moz-transition: opacity 3s ease-out;
+			-webkit-transition: opacity 3s ease-out;
+			-ms-transition: opacity 3s ease-out;
+			transition: opacity 3s ease-out;
+			-moz-transition-delay: 1.25s;
+			-webkit-transition-delay: 1.25s;
+			-ms-transition-delay: 1.25s;
+			transition-delay: 1.25s;
+			content: '';
+			background: #1e2123;
+			display: block;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			opacity: 0;
+		}
+
 /*Arrow on about me*/
 #main2 .more {
 	-moz-transition: -moz-transform 0.75s ease, opacity 0.75s ease;
@@ -4291,6 +4316,30 @@ body.is-loading #main .more {
 	position: absolute;
 	width: 1.5em;
 }
+#main2:after {
+			-moz-pointer-events: none;
+			-webkit-pointer-events: none;
+			-ms-pointer-events: none;
+			pointer-events: none;
+			-moz-transition: opacity 3s ease-out;
+			-webkit-transition: opacity 3s ease-out;
+			-ms-transition: opacity 3s ease-out;
+			transition: opacity 3s ease-out;
+			-moz-transition-delay: 1.25s;
+			-webkit-transition-delay: 1.25s;
+			-ms-transition-delay: 1.25s;
+			transition-delay: 1.25s;
+			content: '';
+			background: #1e2123;
+			display: block;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			opacity: 0;
+		}
+
 
 body.is-loading #main2 .more {
 	-moz-transform: translateY(8.5em);
